--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Mike Condon
-email: 47602908+mikecondon@users.noreply.github.com
+email: mcondon99@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal website of Mike Condon - software projects and technical writings.
+  Personal website of Mike Condon - psychology & neuroscience projects
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mikecondon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: mikecondon
